INTYGFV-11947: Activated signed certificates list (#116)

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -334,7 +334,7 @@ features:
   - &f270
     name: *kf270
     desc: Aktivera lista för signerade intyg i fristående.
-    global: false
+    global: true
 
 pilots:
   - name: SRS_PILOT
