--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -362,3 +362,16 @@ pilots:
         global: true
         intygstyper:
           - *ki050 # LISJP
+  - name: BLOCKERA_FRISTAENDE
+    desc: Blockerar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
+    hsaIds:
+      - TSTNMT2321000156-1077
+    activated:
+      - &pf110
+        name: *kf280
+        desc: Visar ett varningsmeddelande om att inloggning skett i fristående men användaren ska logga in via sitt journalsystem.
+        global: true
+      - &pf120
+        name: *kf290
+        desc: Blockerar möjligheten att skapa nya utkast i fristående Webcert.
+        global: true
