--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -366,6 +366,8 @@ pilots:
     desc: Blockerar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
     hsaIds:
       - TSTNMT2321000156-1077
+    careProviderIds:
+      - TSTNMT2321000156-102Q
     activated:
       - &pf110
         name: *kf280
