--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -362,15 +362,28 @@ pilots:
         global: true
         intygstyper:
           - *ki050 # LISJP
-  - name: BLOCKERA_FRISTAENDE
-    desc: Blockerar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
+  - name: VARNA_FRISTAENDE
+    desc: Varnar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
     hsaIds:
-      - TSTNMT2321000156-102Q # HSA-ID för Vårdgivare
+      - SE4815162344-1A02 # WebCert-Integration Enhet 1
     activated:
       - &pf110
         name: *kf280
         desc: Visar ett varningsmeddelande om att inloggning skett i fristående men användaren ska logga in via sitt journalsystem.
         global: true
+      - &pf120
+        name: *kf290
+        desc: Blockerar möjligheten att skapa nya utkast i fristående Webcert.
+        global: false
+  - name: BLOCKERA_FRISTAENDE
+    desc: Blockerar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
+    hsaIds:
+      - SE4815162344-1A03 # WebCert-Integration Enhet 2
+    activated:
+      - &pf110
+        name: *kf280
+        desc: Visar ett varningsmeddelande om att inloggning skett i fristående men användaren ska logga in via sitt journalsystem.
+        global: false
       - &pf120
         name: *kf290
         desc: Blockerar möjligheten att skapa nya utkast i fristående Webcert.
