--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -422,6 +422,7 @@ pilots:
     desc: Varnar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
     hsaIds:
       - SE4815162344-1A02 # WebCert-Integration Enhet 1
+      - TSTNMT2321000156-10QB # NMT testenhet
     activated:
       - &pf110
         name: *kf280
@@ -435,6 +436,7 @@ pilots:
     desc: Blockerar djupintegrerade vårdgivares användare från att använda vissa funktioner i fristående.
     hsaIds:
       - SE4815162344-1A03 # WebCert-Integration Enhet 2
+      - TSTNMT2321000156-10Q5 # NMT testenhet
     activated:
       - &pf110
         name: *kf280
