--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -225,7 +225,6 @@ privileges:
     name: *kp060
     desc: Besvara fråga om komplettering
     intygstyper:
-      - *ki010 # fk7263
       - *ki040 # lisjp
       - *ki050 # luse
       - *ki060 # luae_na
@@ -318,7 +317,6 @@ privileges:
     name: *kp160
     desc: Skapa ny administrativ fråga
     intygstyper:
-      - *ki010 # fk7263
       - *ki040 # lisjp
       - *ki050 # luse
       - *ki060 # luae_na
@@ -326,7 +324,7 @@ privileges:
     requestOrigins: # Implicit alla
   - &p170
     name: *kp170
-    desc: Skapa ny administrativ fråga
+    desc: Läsa administrativ fråga
     intygstyper:
       - *ki010 # fk7263
       - *ki040 # lisjp
@@ -338,7 +336,6 @@ privileges:
     name: *kp180
     desc: Besvara administrativ fråga
     intygstyper:
-      - *ki010 # fk7263
       - *ki040 # lisjp
       - *ki050 # luse
       - *ki060 # luae_na
