--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ ext {
 
 group = 'se.inera.intyg.refdata'
 version = System.properties['buildVersion'] ?: '1.0-SNAPSHOT'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 if (System.properties['customBuildName']) {
     jar.archiveBaseName = System.properties['customBuildName']
