--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -357,7 +357,7 @@ pilots:
     hsaIds:
       - IFV1239877878-1042
       - TSTNMT2321000156-1077
-      - TSTNMT2321000156-105N
+      - TSTNMT2321000156-105M
     activated:
       - &pf010
         name: *kf120
