--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -108,8 +108,8 @@ features:
       - *ki070 # LUAE_FS
       - *ki110 # AG114
       - *ki120 # AG7804
-  #     - *ki080 # DB
-  #     - *ki090 # DOI
+      - *ki080 # DB
+      - *ki090 # DOI
   #     - *ki100 # AF00213
   #     - *ki111 # AF00213
   #     - *ki130 # TSTRK1062
