--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -533,3 +533,15 @@ pilots:
         name: *kf290
         desc: Blockerar möjligheten att skapa nya utkast i fristående Webcert.
         global: true
+  - name: HANTERA_DB_DOI
+    desc: Hantera DB och DOI pilot
+    hsaIds:
+      - SE2321000081-b3409
+    activated:
+      - &pf020
+        name: *kf020
+        desc: Hantera DB och DOI
+        global: true
+        intygstyper:
+          - *ki080 # DB
+          - *ki090 # DOI
