--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -82,6 +82,7 @@ knownFeatures:
   - &kf290 BLOCKERA_FRISTAENDE
   - &kf300 WEBCERT_MESSAGE_HANDLING
   - &kf310 INAKTIVERA_TIDIGARE_HUVUDVERSION
+  - &kf320 ANVAND_REACT_WEBKLIENT
 
 # Aktiverade features i Webcert
 features:
@@ -358,6 +359,10 @@ features:
     intygstyper:
       - *ki020 # TS-BAS
       - *ki030 # TS-DIABETES
+  - &f320
+    name: *kf320
+    desc: Använd nya reactklienten
+    global: false
 
 pilots:
   - name: TEST_PILOT
@@ -403,3 +408,17 @@ pilots:
         name: *kf290
         desc: Blockerar möjligheten att skapa nya utkast i fristående Webcert.
         global: true
+  - name: REACT_WEBKLIENT_PILOT
+    desc: Pilot avsedd för att testa nya reactklienten
+    hsaids:
+      - TSTNMT2321000156-ALVC # Alfa Vårdcentral
+      - TSTNMT2321000156-ALLM # Alfa Läkarmottagningen
+      - TSTNMT2321000156-ALMC # Alfa Medicincentrum
+    activated:
+      - &pf320
+        name: *kf320
+        desc: Använd nya reactklienten
+        global: true
+        intygstyper:
+          - *ki050 # LISJP
+          - *ki100 # AF00213
