--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -426,6 +426,8 @@ pilots:
       - TSTNMT2321000156-ALMC # Alfa Medicincentrum
       - TSTNMT2321000156-10KW # sopra_vg1_ve1
       - TSTNMT2321000156-1077 # NMT vg3 NMT vg3 ve1
+      - TSTNMT2321000156-102Q # nmt_vg3 (VG)
+      - TSTNMT2321000156-107M # vg_testautomation (VG)
     activated:
       - &pf320
         name: *kf320
@@ -434,3 +436,4 @@ pilots:
         intygstyper:
           - *ki050 # LISJP
           - *ki100 # AF00213
+          - *ki120 # AG7804
