--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -84,6 +84,7 @@ knownFeatures:
   - &kf310 INAKTIVERA_TIDIGARE_HUVUDVERSION
   - &kf330 SUBSCRIPTION_ADAPTATION_PERIOD
   - &kf340 SUBSCRIPTION_REQUIRED
+  - &kf350 SKRIV_UT_I_IFRAME
 
 # Aktiverade features i Webcert
 features:
@@ -368,6 +369,10 @@ features:
     name: *kf340
     desc: Subscription required
     global: false
+  - &f350
+    name: *kf350
+    desc: Använd en Iframe som target vid utskrift
+    global: true
 
 pilots:
   - name: SRS_PILOT
