INTYGFV-14687: Added 7 new SRS-units.

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -422,6 +422,13 @@ pilots:
       - SE2321000032-3X8A
       - SE2321000032-43V9
       - SE2321000032-42FS
+      - SE2321000032–43SS
+      - SE2321000032–595S
+      - SE2321000032–43PX
+      - SE2321000032–42R6
+      - SE2321000032–43P4
+      - SE2321000032–3ZJ8
+      - SE2321000032–4CVC
     activated:
       - &pf010
         name: *kf120
