--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -413,6 +413,7 @@ pilots:
       - TSTNMT2321000156-1077 # NMT vg3 NMT vg3 ve1
       - TSTNMT2321000156-102Q # nmt_vg3 (VG)
       - TSTNMT2321000156-107M # vg_testautomation (VG)
+      - SE2321000016-I1B7 # Testenhet 17
     activated:
       - &pf320
         name: *kf320
