INTYGFV-14804: Dentists should have privilege to forward drafts for af00213, ag7804 and af00251. Fix: The certificateTypes that are present in requestOrigins must also be defined in 'intygstyper', otherwise the certificateType will be ignored when validating the privilege.

--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -730,7 +730,10 @@ roles:
           - <<: *ro020 # DJUPINTEGRATION
       - <<: *p040 # VIDAREBEFORDRA_UTKAST
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
+          - *ki100 # af00213
+          - *ki120 # ag7804
+          - *ki111 # af00251
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
