--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -437,6 +437,18 @@ pilots:
       - SE2321000206-E00328
       - SE2321000206-E00463
       - SE2321000206-E00565
+      - SE2321000032-5LTC
+      - SE2321000115-O78315
+      - SE2321000115-O26433
+      - SE2321000115-O85964
+      - SE2321000115-O12130
+      - SE2321000115-O53603
+      - SE2321000115-O71779
+      - SE2321000115-O11396
+      - SE2321000115-O91557
+      - SE2321000206-E00436
+      - SE2321000206-E00434
+      - SE2321000206-E00766
     activated:
       - &pf010
         name: *kf120
@@ -669,6 +681,7 @@ pilots:
       - TSTNMT2321000156-10KW # sopra_vg1_ve1
       - TSTNMT2321000156-1003 # nmt_vg1_ve1
       - TSTNMT2321000156-1013 # nmt_vg2_ve1
+      - SE2321000016-152M
     activated:
       - &pf320
         name: *kf320
@@ -676,5 +689,4 @@ pilots:
         global: true
         intygstyper:
           - *ki050 # LISJP
-          - *ki100 # AF00213
           - *ki120 # AG7804
