--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -427,7 +427,8 @@ pilots:
           - *ki090 # DOI
           - *ki060 # LUAENA
           - *ki070 # LUAEFS
-          - *ki020 # TSBAS
+          - *ki020 # TS-BAS
           - *ki040 # LUSE (FK7800)
           - *ki030 # TS-DIABETES
+          - *ki110 # AG1-14
 
